# mandelbrot

./: CMakeLists.txt  README.md
include/: OpenCL.h  Vector4.hpp  util.hpp
kernels/: mandlebrot.cl
src/: OpenCL.cpp  main.cpp
